fixed some typos

--- a/dfg_project_screenscraping.ipynb
+++ b/dfg_project_screenscraping.ipynb
@@ -25,12 +25,12 @@
     "website = requests.get(initial_URL)\n",
     "#convert to beautifulsoup-object\n",
     "results = BeautifulSoup(website.content, 'html.parser')\n",
-    "#get the number of pages that needs to extracted. \n",
+    "#get the number of pages that needs to be extracted. \n",
     "#the number that we want is saved as '2.751'. To get rid of the dot and convert it into an integer-value, the numbers are extracted individually as an array, joined and converted to an integer value\n",
     "number_pages_to_extract = int(''.join(re.findall(r'\\d+', results.find(\"span\", {\"id\": \"result-info\"}).find(\"strong\").get_text())))\n",
     "#the keys that we are interested in to extract. Needs the exact name of the possible keys from a project page (Example of a project page: https://gepris.dfg.de/gepris/projekt/268931)\n",
     "keys_to_extract = [\"Fachliche Zuordnung\", \"Förderung\", \"Webseite\", \"DFG-Verfahren\"]\n",
-    "#create empty dictionary to fill it with data \n",
+    "#create empty list to fill it with dictionaries (projects) \n",
     "data = []\n",
     "\n",
     "for x in range(number_pages_to_extract):\n",
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "#save as csv_file as gepris_projects_wikidata.csv\n",
+    "#save csv file as gepris_projects_wikidata.csv\n",
     "myFile = open('gepris_projects_wikidata.csv', 'w', encoding='utf-8')\n",
     "writer = csv.DictWriter(myFile, lineterminator='\\n', fieldnames=['GEPRIS Project ID', 'Projekttitel', 'Wikidata Description', 'DFG-Webseite', 'Fachliche Zuordnung', 'von', 'bis', 'Webseite', 'DFG-Verfahren'])\n",
     "writer.writeheader()\n",
