another typo (in comments) fixed

--- a/dfg_project_screenscraping.ipynb
+++ b/dfg_project_screenscraping.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "#import relevant libraries\n",
     "#requests for get requests\n",
-    "#csv to convert file into csv\n",
+    "#csv to convert data into csv file\n",
     "#re to extract the maximum number of page with a regular expression\n",
     "#BeautifulSoup to scrape data\n",
     "import requests\n",
